Update to 1.3 version to reflect changes to resource resolvers.